--- a/dat/index.html
+++ b/dat/index.html
@@ -217,8 +217,7 @@
                         <li>
                         <a href="https://www.linkedin.com/">Linkedin</a></li>
                         <li>
-                        <a href="https://githhub.com/">Github</a></li>
-                    </ol>
+                       <li><a href="./index.html">Home</a> </li> </ol>
                 </div>
             </div>
         </div>
