--- a/huy/index.html
+++ b/huy/index.html
@@ -32,7 +32,7 @@
         <h2> Thông tin cá nhân.</h2>
         <p>Họ và tên: Phạm Quang Huy. <br/> Tuổi: 21. <br/> Giới tính: Nam. <br/> Quê quán: Hải Phòng.</p>
     </div>
-    <div id="center"><img class="img-responsive" src="https://scontent.fhan14-3.fna.fbcdn.net/v/t39.30808-6/292478626_1452423358566034_8896254024054942192_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=efb6e6&_nc_eui2=AeF6UEdofZsqq17guExiDcRDdXEsKTzkBst1cSwpPOQGy53i1Q6fOEH0zEhjzRYCn3AdFbv5QY8WqNYL7amsijmC&_nc_ohc=heKmGW9PPDoAX-x9eYM&_nc_ht=scontent.fhan14-3.fna&oh=00_AfAZnCXOdjeRVpei51g3iOUwG5ZB689MMymTybIQs70B2w&oe=65EAE0C8"></div>
+    <div id="center"><img class="img-responsive" src="https://scontent.fhan14-3.fna.fbcdn.net/v/t39.30808-6/292478626_1452423358566034_8896254024054942192_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeG9JIfURe8YRyiFJSUe7YjudXEsKTzkBst1cSwpPOQGy3F0YcdilidOJRcTJ1Hj0oQ-eZbWRyq8y3ddVflvcPa8&_nc_ohc=WtWOas49KnoAX8pkxoL&_nc_ht=scontent.fhan14-3.fna&oh=00_AfA0ELiylqImpF1Us725xlHLg9XoQqirEW4x5NrouF9GYw&oe=65F6BE48"></div>
     <div>
         <h2>Học vấn</h2>
         <ul>
